# new_tui

./: CMakeLists.txt  README  log.txt  run.bat  run.sh  test_main.c
doc/: bug.todo
src/: backtrace.h  log.h  main_test.c  microui.c  minitest.h  renderer.h  style.h  term.c  term.h  ui_renderer.c  ui_renderer.h  utf8.h
src/core/: color_palette.h  log.h  render.c  render.h  render_style.h  term.c  term.h  tui.c  tui.h  utf8.c  utf8.h  widgets.c  widgets.h  widgets_button.c  widgets_input.c  widgets_inputbox.c  widgets_label.c  widgets_richtext.c
src/test/core/: c_test.c  c_test.h
src/test/tests/: test_button.c  test_input.c  test_inputbox.c  test_label.c  test_layout.c  test_log.c  test_popup.c  test_render.c  test_render1.c  test_resize.c  test_richtext.c  test_term.c  test_tui.c  test_utf8.c
test/: test_backtrace.c  test_microui.c  test_renderer.c  test_term.c  test_ui_renderer.c  test_utf8.c
